[workspace]
members = [
    "akashi-cache",
    "akashi-cmds",
    "akashi-core",
    "akashi-esi",
    "akashi-shared"
]
resolver = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[workspace.dependencies]
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
poise = { git = "https://github.com/fgardt/poise", branch = "feat/user_apps", features = ["unstable"] }
dashmap = "6.0.1"
reqwest = "0.12.5"
regex = "1.10.6"
once_cell = "1.19.0"
pistones = "0.2.1"
sysinfo = "0.31.4"
tempfile = "3.12.0"